Wed Apr 15 07:51:23 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* doc/extension.ja.rdoc: Added description of TypedData_XXX.
	  Deprecated the old DATA_XXX.
	  Reviewed by ko1 and nobu.
	  Fixes [ruby-dev:40881] #3064

	* doc/extension.rdoc: ditto.

Wed Apr 15 07:34:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (reserve_stack): keep sp safe zone to get rid
	  of crash by -fstack-check.  [ruby-core:68740] [Bug #11030]

Tue Apr 14 16:03:49 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/merger.rb (versionup): should also increment revision when
	  changing teeny.

Tue Apr 14 11:24:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/printf/printf.c (uint_to_str): renamed to get rid of
	  conflict on cygwin.  [ruby-core:68877] [Bug #11065]

Tue Apr 14 08:59:04 2015  Zachary Scott  <e@zzak.io>

        * gc.c: [DOC] Improve documentation for ObjectSpace.count_objects
          with regards to `:TOTAL` key, with patch by @schneems [Fixes GH-871]
          https://github.com/ruby/ruby/pull/871 [Bug #11067]

Mon Apr 13 22:44:07 2015  Tanaka Akira  <akr@fsij.org>

	* test/lib/envutil.rb (File.mkfifo): Defined using mkfifo command.

	* test/ruby/test_io.rb: Use File.mkfifo.

	* test/ruby/test_file_exhaustive.rb: Ditto.

	* test/ruby/test_process.rb: Ditto.

Mon Apr 13 21:20:20 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/openssl/lib/openssl/ssl.rb: stricter hostname verification
	  following RFC 6125. with the patch provided by Tony Arcieri and
	  Hiroshi Nakamura [ruby-core:61545] [Bug #9644]
	* test/openssl/test_ssl.rb: add tests for above.

Sun Apr 12 18:40:04 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/json.gemspec: bump version to 1.8.2.
	* ext/json/lib/json/version.rb: ditto.

Sun Apr 12 18:12:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json/json.gemspec, lib/rdoc/rdoc.gemspec: added gemspec directly.
	* defs/default_gems, tool/rbinstall.rb: removed default_gems definition.