@@ -1646,7 +1646,7 @@ def pthread_check()
 
   if TclConfig_Info['config_file_path']
     if tcl_enable_thread == true
-      puts("Warning: definiton of tclConfig.sh is ignored, because --enable-tcl-thread option is given.")
+      puts("Warning: definition of tclConfig.sh is ignored, because --enable-tcl-thread option is given.")
     elsif tcl_enable_thread == false
       puts("Warning: definition of tclConfig.sh is ignored, because --disable-tcl-thread option is given.")
     else
