@@ -23,7 +23,7 @@ tkfont.rb	Tk font support
 tkmacpkg.rb	Mac resource support
 tkmenubar.rb	TK menubar utility
 tkmngfocus.rb	focus manager
-tkpalette.rb	pallete support
+tkpalette.rb	palette support
 tkscrollbox.rb	scroll box, also example of compound widget
 tktext.rb	text classes
 tkvirtevent.rb	virtual event support
